# vo-ip-agent-conversationnel

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  TODO.md  TODO_SPRINTS.md  docker-compose.yml
config/: README.md
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/common/: Cargo.toml  build.rs
crates/common/proto/: auth.proto  common.proto  media.proto  monitoring.proto  provisioning.proto  routing.proto  sip.proto
crates/common/src/: errors.rs  events.rs  lib.rs  telemetry.rs  types.rs
crates/media/: Cargo.toml
crates/media/src/: lib.rs
crates/signalling/: Cargo.toml
crates/signalling/src/: lib.rs
docs/: cdc.md  sprints.md
docs/architecture/: README.md  data-model.md  deployment.md  observability.md  overview.md
docs/decisions/: README.md  adr-20250920-signalisation-stack.md
docs/retros/: README.md
docs/risks/: register.md
scripts/: README.md  bootstrap.sh  memory-bench.sh
tests/: README.md
